--- a/www/composer.json
+++ b/www/composer.json
@@ -3,8 +3,8 @@
   "license": "proprietary",
   "authors": [
     {
-      "name": "parho",
-      "email": "email@example.com"
+      "name": "Dmytro Parkhomenko",
+      "email": "parhomenkodmitriy69@gmail.com"
     }
   ],
   "require": {
